public_html/static/music_worklet_inprogress/music.css
html, body{
    padding: 0px;
    margin: 0px;
}

body {
    color: #ababab;
    background: #000;
    font-family: Segoe UI, Helvetica, Arial, Sans-Serif;
}

.header {
    position: fixed;
    top: 0;
    padding-left: 25px;
    background-color: #000;
    height: 10%;
    width: 100%;
    min-height: 90px;
    display: block;
}

/* music library shown in .body */
.body {
    position: fixed;
    top: max(10%, 90px);
    overflow: auto;
    box-sizing: border-box;
    padding-left: 2%;
    width: 100%;
    max-height: calc(100% - max(20%, 250px) - max(10%, 90px)); /*the whole page minus the header and footer*/
}

.track:hover {
    background-color: #00796b;
}

/* full-screen album art can be shown ontop of .body */
.fsalbumart {
    position: fixed;
    top: max(10%, 90px);
    padding-left: 2%;
    z-index: 201;
    max-width: 100%;
    max-height: calc(100% - max(20%, 250px) - max(10%, 90px)); /*the whole page minus the header and footer*/
    min-height: calc(100% - max(20%, 250px) - max(10%, 90px)); /*the whole page minus the header and footer*/
}

/* music player is always shown at the bottom */
.footer {
    position: fixed;
    box-sizing: border-box;
    bottom: 0;
    width: 100%;
    height: max(20%, 250px);
    padding-left: 2%;
    padding-top: 10px;
    background-color:blue;    
}

/* First the prev, current, and next tracks*/
.ptdiv {
    position: absolute;
    height: 70%;
    width: 80%;
    overflow: hidden;
    display: flex;
    flex-direction: row;
    border: 1px solid #ababab;
}

.scol {
    border: 1px solid #ababab;
    width: 20%;
    display: flex;
    flex-direction: column;
}

.mcol {
    border: 1px solid #ababab;
    width: 60%;
    display: flex;
    flex-direction: column;
}

.colheader {
    padding: 3px 10px;
    border: 1px solid #ababab;
    font-weight: bold;
}

.newtracktext {
    padding: 3px 10px;
    border: 1px solid #ababab;
    overflow: hidden;
    flex: 1;
    align-self: stretch;
}

.trackdiv {
    display: flex;
    align-items: center;
    height: 100%;
    overflow: hidden;
}

.albumart {
    display: inline-block;
    max-width: 10%;
    max-height: 100%;
    padding-right: 5px;
    min-width: 40px;
}

.trackmetadata {
    display: flex;
    align-items: center;
    padding-left: 5px;
    height: 100%;
    white-space: normal;
    text-overflow: ellipsis;
    overflow: hidden;
}

/* Then the controls */
.acontrols {
    position: absolute;
    top: 70%;
    width: 100%;
    height: 30%;
    display: inline-block;
    overflow: hidden;
}

.controlbtns {
    padding: 0;
    border-width: thick;
}

#seekbar {
    width: 60%;
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 30px;
}

.timedisplay {
    width: 55px;
}

.boldlbl {
    font-weight: bold;
}

